{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 166,
  "lineage": "7b168d8d-eca2-8b2f-695e-8eb7d504a9e5",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:395053504835:vpc/vpc-3cfca05b",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-8b8b81e2",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-ea59e48d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-3cfca05b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-60468706",
            "owner_id": "395053504835"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "SshKeyTest",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-a58d0dc5",
            "arn": "arn:aws:ec2:us-west-2:395053504835:instance/i-0b0919a993a0b2ffd",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b0919a993a0b2ffd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sam_test_new_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00ee840f75fbf1330",
            "private_dns": "ip-10-0-1-236.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-094da22847129c466",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05eb69d11787d6c7a",
            "tags": {
              "Name": "SshKeyTest"
            },
            "tags_all": {
              "Name": "SshKeyTest"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05b22188b2c96edc7"
            ]
          },
          "dependencies": [
            "aws_security_group.issa-security-group",
            "aws_subnet.issa-private-subnet",
            "aws_vpc.issa-private-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "issa-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:395053504835:internet-gateway/igw-0ac9e24f1f3bde0a7",
            "id": "igw-0ac9e24f1f3bde0a7",
            "owner_id": "395053504835",
            "tags": {
              "Name": "issa-igw"
            },
            "tags_all": {
              "Name": "issa-igw"
            },
            "vpc_id": "vpc-0bbd2beef716078be"
          },
          "dependencies": [
            "aws_vpc.issa-private-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "issa-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:395053504835:route-table/rtb-0f8d558434e5e5fd3",
            "id": "rtb-0f8d558434e5e5fd3",
            "owner_id": "395053504835",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ac9e24f1f3bde0a7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "issa-crt"
            },
            "tags_all": {
              "Name": "issa-crt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbd2beef716078be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.issa-igw",
            "aws_vpc.issa-private-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "issa-crta-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb099ea39e8c22c4",
            "route_table_id": "rtb-0f8d558434e5e5fd3",
            "subnet_id": "subnet-05eb69d11787d6c7a"
          },
          "dependencies": [
            "aws_internet_gateway.issa-igw",
            "aws_route_table.issa-route-table",
            "aws_subnet.issa-private-subnet",
            "aws_vpc.issa-private-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "issa-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:395053504835:security-group/sg-05b22188b2c96edc7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b22188b2c96edc7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20221202061820312500000001",
            "name_prefix": "terraform-",
            "owner_id": "395053504835",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bbd2beef716078be"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.issa-private-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "issa-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:395053504835:subnet/subnet-05eb69d11787d6c7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05eb69d11787d6c7a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "395053504835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0bbd2beef716078be"
          },
          "dependencies": [
            "aws_vpc.issa-private-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "issa-private-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:395053504835:vpc/vpc-0bbd2beef716078be",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a4a31a6b4894f533",
            "default_route_table_id": "rtb-04c5381d4f2d2588e",
            "default_security_group_id": "sg-0d4b1ed2f8058e7ae",
            "dhcp_options_id": "dopt-ea59e48d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0bbd2beef716078be",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04c5381d4f2d2588e",
            "owner_id": "395053504835",
            "tags": {
              "Name": "issa-private-vpc"
            },
            "tags_all": {
              "Name": "issa-private-vpc"
            }
          }
        }
      ]
    }
  ]
}